--- a/config/css/cabecario-adm.css
+++ b/config/css/cabecario-adm.css
@@ -10,7 +10,7 @@ body{
 
 header {
     border-top: solid 20px #FE8A00 ;
-    background-color: #ffffff;
+    background-color: green;
     box-shadow: 0px 3px 10px #464646;
     padding: 20px;
 }
